# evalml

./: .gitignore  .jretrievedwh-conf.prod.py  .pre-commit-config.yaml  AGENTS.md  README.md  altitude_comparison_inca_kenda.ipynb  debugging_summary_interpolator_2.txt  environment.yaml  evaluation.ipynb  examine_error_distr_fine_tune.ipynb  example_inca_baseline.py  job_inference.sh  multi_evalml.sh  multi_run.sh  paper_plots.py  pyproject.toml  snakemake_log.txt
.github/workflows/: ci.yaml  docs.yaml  main.yaml
ci/: README.md  coverage-longtest.cfg  cscs.yml  run-longtest-coverage.sh
config/: Varda-Single_paper.yaml  Varda-Single_v1.0.yaml  aifs-single.yaml  anemoi_inference.yaml  config.yaml  experiments.yaml  forecaster_cosmo1.yaml  forecasters-aifs.yaml  forecasters-co1e.yaml  forecasters-co2-disentangled.yaml  forecasters-co2-disentangled_full.yaml  forecasters-co2-mod-01.yaml  forecasters-co2.yaml  forecasters-ea-global.yaml  forecasters-ich1-oper-all.yaml  forecasters-ich1-oper-fixed.yaml  forecasters-ich1-oper-small_adj_lfr_05_Stage_E_only_default_exp.yaml  forecasters-ich1-oper-try-interpolator_for-Santis.yaml  forecasters-ich1-oper-try-interpolator_initial.yaml  forecasters-ich1-oper-try-interpolator_minimal_Claude.yaml  forecasters-ich1-oper.yaml  forecasters-ich1-scratch-SG-vs-hierarchical.yaml  forecasters-ich1-scratch-SG-vs-hierarchical_showcase.yaml  forecasters-ich1-scratch-vs-subgrid.yaml  forecasters-ich1-scratch-vs-tuned.yaml  forecasters-ich1-scratch-vs-tuned_showcase.yaml  forecasters-ich1-stage-C-encoder-variations-FIXED.yaml  forecasters-ich1-stage-C-encoder-variations.yaml  forecasters-ich1-stage-C-encoders.yaml  forecasters-ich1-stage-C-variations.yaml  forecasters-ich1-stage-C-variations_showcase.yaml  forecasters-ich1-stage-C-vs-limited-new.yaml  forecasters-ich1-stage-C-vs-stage_E.yaml  forecasters-ich1-stage-C-vs-stage_E_showcase.yaml  forecasters-ich1-stage-C-vs-subgrid.yaml  forecasters-ich1-stage-E-vs-horography.yaml  forecasters-ich1-stage-E-vs-knn5-dec.yaml  forecasters-ich1-stage_E-obs.yaml  forecasters-ich1-stage_E-variations.yaml  forecasters-ich1.yaml  (+32 more)
config/experiments/: stage_D-cerra-N320-low_lam.yaml  stage_D-cerra-N320.yaml
config/studies/: cosmo2_emulator_bestmodel.yaml
config/to_launch/: forecasters-ich1-SG-vs-multi.yaml  forecasters-ich1-scratch-vs-subgrid.yaml  forecasters-ich1-tuned-SG-vs-hierarchical.yaml
docs/: Makefile  publication_figures.md  realv2_vmax10m.md
docs/source/: conf.py  index.md
experiments/: 10_vs_11_hidden.yaml  full_dataset_vs_cosmo_limited.yaml  graph_structures.yaml  scratch_vs_finetune.yaml  showcases.yaml
figures/: README.md
plot_scripts/: ablations_leadtime.py  diagram.py  leadtime_plots.py  realv2_animation.py  vmax10.py  vmax10_compare.py  watch_realv2_animation.py
proper-eval/: encoder-connectivity-stage-C.yaml  old-vs-new-Stage-C.yaml  subgrid-orography-stage-C-no-baseline.yaml  subgrid-orography-stage-C.yaml  subgrid-orography-stage-E.yaml
resources/mec/: namelist.jinja2
slogs/: stage_C-run-1.err  stage_C-run-1.out
tests/: conftest.py
workflow/: Snakefile
(+264 files in other folders)
