[project]
name = "evalml"
version = "0.1.0-beta.1"
description = "Evaluation CLI for ML models"
readme = "README.md"
authors = [
    { name = "Francesco Zanetta", email = "francesco.zanetta@meteoswiss.ch" },
    { name = "Daniele Nerini", email = "daniele.nerini@meteoswiss.ch" },
]
requires-python = ">=3.11"
dependencies = [
    "snakemake<9.10", # https://github.com/snakemake/snakemake/issues/3289
    "snakemake-executor-plugin-slurm",
    "click",
    "anemoi-datasets>=0.5.31",
    "mlflow>=3.1.1",
    "pydantic>=2.11.7",
    "toml>=0.10.2",
    "netcdf4>=1.7.2",
    "shapely>=2.1.2",
    "cartopy>=0.25.0",
    "pyproj>=3.7.2",
    "marimo>=0.23.3",
    "geopandas>=0.14.0",
    "pyzmq>=27.1.0",
    "scores>=2.0.0",
    "eccodes>=2.44,<2.48",
    "eccodes-cosmo-resources-python==2.44.0.1",
    "earthkit-data==1.0.0rc10",
    "earthkit-utils==1.0.0rc1",
    "earthkit-plots==1.0.0rc9",
    "earthkit-meteo==1.0.0rc3",
    "earthkit-geo==1.0.0rc7"
]

[project.scripts]
evalml = "evalml:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "snakefmt>=2.0",
]

[tool.pytest.ini_options]
markers = [
    "longtest: mark tests that take a long time to run, e.g. integration tests",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/evalml",
  "src/verification",
  "src/data_input"
]

[tool.uv.sources]
eccodes-cosmo-resources-python = { git = "https://github.com/MeteoSwiss/eccodes-cosmo-resources-python" }
